--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -10,6 +10,10 @@
     margin: 0 auto;
 }
 
+.w-content .left img {
+    height: 32px;
+}
+
 .left {
     display: flex;
 }
@@ -22,15 +26,39 @@
 .right {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    align-items: center;
 }
 
-.right button {
+.right a {
     border: none;
     background-color: transparent;
+    font-size: 18px;
     color: #fff;
     cursor: pointer;
+    text-decoration: none;
+}
+
+.right a .material-symbols-outlined {
+    font-size: 28px;
+    margin: 0 8px;
+}
+
+.right a:hover {
+    font-weight: 700;
 }
 
 .right button:hover {
     color: #000;
+}
+
+@media(max-width:768px) {
+    .nav-content {
+        padding: 16px 32px;
+    }
+    .w-content {
+        width: 100%;
+    }
+    .w-content .left img {
+        height: 24px;
+    }
 }
