add Ensligh and Spanish lang

--- a/src/modules/Jobs/Jobs.css
+++ b/src/modules/Jobs/Jobs.css
@@ -19,13 +19,13 @@
     font-size: 24px;
     font-weight: 700;
     margin-bottom: 0;
-    color: #464646;
+    color: #043e5d;
 }
 
 .content-box .left-job p{
     font-size: 14px;
     font-weight: 400;
-    color: #464646;
+    color: #043e5d;
     line-height: 20px;
 }
 
