--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,28 @@
   }
 }
 
+.flags-lang {
+  	display: flex;
+  	flex-direction: row;
+	  background-color: #043e5d;
+	  padding: 2px 24px;
+	  align-items: center;
+    justify-content: right;
+}
+.flags-lang p {
+	font-size: 14px;
+	color: #fff;
+}
+.flags-lang img {
+	height: 18px;
+	cursor: pointer;
+	margin-left: 10px;
+    border: 1px solid #fff;
+}
+.flags-lang img:hover {
+	opacity: .7;
+}
+
 .projects {
   background-color: #66b6e1;
   padding: 24px;
