img code not available

--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,7 @@ html { scroll-behavior: smooth; }
 	cursor: help;
 	color: #000;
 	font-size: 14px;
-	line-height: 20px;
+	/* line-height: 20px; */
 	font-weight: 400;
 	text-transform:capitalize;
 }
