--- a/src/modules/Jobs/Jobs.css
+++ b/src/modules/Jobs/Jobs.css
@@ -49,18 +49,17 @@
 }
 
 .content-box .right-job img{
-    width: 100%;    
-}
-
-.content-box .right-job .box-project-img {
+    width: 100%;
     border: 1px solid #ddd;
 }
+
 
 .content-box .right-job .network {
     display: flex;
     flex-direction: row;
     justify-content: center;
     margin: 12px auto 0;
+    align-items: center;
 }
 
 .content-box .right-job .network .networkImg {
@@ -71,5 +70,12 @@
 }
 
 .content-box .right-job .network .networkImg:hover {
-    opacity: .7;
+    opacity: .5;
+}
+
+.content-box .right-job .network .lock {
+    opacity: .2;
+    width: 22px;
+    margin: 0 8px;
+    border: none;
 }
